--- a/config/database.yml
+++ b/config/database.yml
@@ -5,15 +5,15 @@ default: &default
 
 development:
   <<: *default
-  database: rubysec-dev
+  database: rubymem-dev
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: rubysec-test
+  database: rubymem-test
 
 production:
   <<: *default
-  database: rubysec
+  database: rubymem-prod
