--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,12 @@
 # Ignore bundler config.
 /.bundle
 
+# Ignore Ruby Version Manager File
+.ruby-version
+
+# Ignore Database Configuration File
+config/database.yml
+
 # Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-journal
