--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ services:
   - postgresql
 
 before_script:
+  - cp config/database.yml.sample config/database.yml
   - bundle exec rake db:create db:migrate
-
